移动端开发的一部分

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -24,3 +24,11 @@ html {
   padding-top: 8px;
   color: #2db7f5;
 }
+
+#mobileheader i {
+  font-size: 0.5rem;
+  float:right;
+  margin-right: 0.3rem;
+  margin-top: 0.3rem;
+  color: #2db7f5;
+}
